[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://probs/bg_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/UI/bar-title.png" type="Texture" id=3]
[ext_resource path="res://probs/txt.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UI/play-button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/exit-button.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/sound-button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/sound-button-off.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/music-button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/music-button-off.png" type="Texture" id=10]
[ext_resource path="res://probs/player_plane.tscn" type="PackedScene" id=11]
[ext_resource path="res://probs/click.tscn" type="PackedScene" id=12]
[ext_resource path="res://probs/audio.tscn" type="PackedScene" id=13]
[ext_resource path="res://probs/fade.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Doubledecker DEMO.otf"

[sub_resource type="DynamicFont" id=2]
size = 37
font_data = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="Menu" type="Node2D"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="bg" parent="." instance=ExtResource( 2 )]

[node name="bar-title" type="Sprite" parent="."]
position = Vector2( 545.023, 145.974 )
scale = Vector2( 1.07457, 0.739785 )
texture = ExtResource( 3 )

[node name="txt" parent="." instance=ExtResource( 4 )]
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="btnjogar" type="Button" parent="."]
editor/display_folded = true
margin_left = 480.36
margin_top = 337.096
margin_right = 602.36
margin_bottom = 406.096
rect_scale = Vector2( 1, 1.56 )
custom_fonts/font = SubResource( 2 )
text = " JOGAR"
flat = true

[node name="play-button" type="Sprite" parent="btnjogar"]
position = Vector2( 61.7317, 33.4121 )
scale = Vector2( 0.55, 0.35 )
texture = ExtResource( 5 )

[node name="btnSair" type="Button" parent="."]
editor/display_folded = true
margin_left = 891.708
margin_top = 0.733063
margin_right = 1010.71
margin_bottom = 78.7331
rect_scale = Vector2( 1, 1.56 )
custom_fonts/font = SubResource( 2 )
text = "Sair"
flat = true

[node name="exit-button" type="Sprite" parent="btnSair"]
position = Vector2( 56.9966, 38.2444 )
scale = Vector2( 0.552704, 0.340545 )
texture = ExtResource( 6 )

[node name="btnSound" type="Button" parent="."]
editor/display_folded = true
margin_left = 623.691
margin_top = 329.616
margin_right = 742.688
margin_bottom = 407.616
rect_scale = Vector2( 1, 1.56 )
custom_fonts/font = SubResource( 2 )
text = "Sair"
flat = true

[node name="anim" type="AnimatedSprite" parent="btnSound"]
position = Vector2( 58, 38 )
scale = Vector2( 0.548363, 0.346514 )
frames = SubResource( 3 )
animation = "on"

[node name="btnMusic" type="Button" parent="."]
editor/display_folded = true
margin_left = 343.109
margin_top = 329.179
margin_right = 457.109
margin_bottom = 407.179
rect_scale = Vector2( 1, 1.56 )
custom_fonts/font = SubResource( 2 )
text = "Sair"
flat = true

[node name="anim" type="AnimatedSprite" parent="btnMusic"]
position = Vector2( 58, 38 )
scale = Vector2( 0.55, 0.33 )
frames = SubResource( 4 )
animation = "on"

[node name="player_plane" parent="." instance=ExtResource( 11 )]
position = Vector2( 158.667, 227.145 )

[node name="click" parent="." instance=ExtResource( 12 )]

[node name="audio" parent="." instance=ExtResource( 13 )]

[node name="fade" parent="." instance=ExtResource( 14 )]
[connection signal="pressed" from="btnjogar" to="." method="_on_btnjogar_pressed"]
[connection signal="pressed" from="btnSair" to="." method="_on_btnSair_pressed"]
[connection signal="pressed" from="btnSound" to="." method="_on_btnSound_pressed"]
[connection signal="pressed" from="btnMusic" to="." method="_on_btnMusic_pressed"]
